# cloudaudit-v2

./: ARCHITECTURE.md  CLOUDAUDIT_DOCUMENTATION.txt  CLOUDAUDIT_END_TO_END_FLOW.txt  README.md  cloudaudit.py  documentation.txt  pyproject.toml
compliance/aws/: audit_user_policy.json  cis_aws.json
lib/allowlisters/: __init__.py
lib/check/: models.py
output/: json.py
providers/aws/: aws_provider.py  aws_regions_by_service.json
providers/aws/services/awslambda/awslambda_function_no_public/: awslambda_function_no_public.py
providers/aws/services/cloudtrail/: cloudtrail_client.py
providers/aws/services/cloudtrail/cloudtrail_enabled/: cloudtrail_enabled.py
providers/aws/services/ec2/: ec2_client.py
providers/aws/services/ec2/ec2_public_ips/: ec2_public_ips.py
providers/aws/services/ec2/ec2_security_groups_opens_multiple/: ec2_security_groups_opens_multiple.py
providers/aws/services/ec2/ec2_security_groups_opens_ssh/: ec2_security_groups_opens_ssh.py
providers/aws/services/iam/: iam_client.py
providers/aws/services/iam/iam_admin_roles/: iam_admin_roles.py
providers/aws/services/iam/iam_no_root_access_key/: iam_no_root_access_key.py
providers/aws/services/iam/iam_password_policy/: iam_password_policy.py
providers/aws/services/iam/iam_root_mfa_enabled/: iam_root_mfa_enabled.py
providers/aws/services/iam/iam_user_access_key_unused/: iam_user_access_key_unused.py
providers/aws/services/iam/iam_users_without_mfa/: iam_users_without_mfa.py
providers/aws/services/rds/: rds_client.py
providers/aws/services/s3/: s3_client.py
(+8 files in other folders)
