[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudaudit"
version = "0.1.0"
description = "Lightweight multi-cloud security auditing tool using CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "CloudAudit Team"}
]
keywords = ["security", "audit", "aws", "cloud", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.scripts]
cloudaudit = "cloudaudit:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["providers*", "lib*", "output*", "checks*", "compliance*"]